<resources>
    <string name="app_name">Markdown Note</string>
    <string name="add_button">add button</string>
    <string name="main_menu_draft">Open navigation drawer</string>
    <string name="main_menu_tag">Edit tag</string>
    <string name="main_menu_setting">Setting</string>

    <string name="query_hint">Search in notes…</string>
    <string name="markdown_hint">Write in Markdown…</string>
    <string name="back_button">Back</string>
    <string name="switch_markdown">Switch Markdown</string>

    <string name="all_notes">All notes</string>
    <string name="bookmarked_notes">Liked</string>
    <string name="draft_notes">Drafts</string>
    <string name="trash_notes">Trash</string>

    <string name="emoji_string">Emoji</string>
    <string name="general_string">General</string>
    <string name="read_md">Read text file</string>
    <string name="read_json">Read JSON file</string>
    <string name="read_js">Read js</string>


    <string name="switch_markdown_in_showfragment">Switch Markdown</string>
    <string name="choose_emoji">Choose Emoji</string>
    <string name="delete_note">Delete note</string>
    <string name="restore_note">Restore note</string>
    <string name="export_note">Export note</string>
    <string name="deleted_message">was successfully deleted</string>
    <string name="undo_message">Undo</string>

    <string name="save_note">Save note</string>
    <string name="file_path_edit_text_preference_key" translatable="false">file_path_edit_preference</string>
    <string name="backup_save_preference" translatable="false">backup_save_preference</string>
    <string name="change_emoji">Change Emoji</string>

    <string name="backup_string">Backup</string>
    <string name="start_backup">Start back up</string>
    <string name="load_backup">Load back up file</string>
    <string name="list_prefrence_description">Select syntax used in edit text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="delete_note_in_trash_title">Delete note</string>
    <string name="delete_note_message">Discard note from the list?</string>
    <string name="delete_note_bookmarked_message">Discard bookmarked note from the list?</string>
    <string name="delete_note_in_draft_message">Discard draft note from the list?</string>
    <string name="delete_note_in_trash_message">Discard trash note from the list?</string>
</resources>