<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_bar_item_back_arrow"
        android:icon="@drawable/back"
        android:title="@string/back_button"
        android:visible="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_app_bar_item_preview_raw_change"
        android:title="@string/switch_markdown"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/bottom_app_bar_item_preview_raw_change_in_show_fragment"
        android:title="@string/switch_markdown_in_showfragment"
        app:showAsAction="ifRoom"
        android:visible="false" />
    <item
        android:id="@+id/bottom_app_bar_item_emoji_unicode_text"
        android:title="@string/choose_emoji"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/bottom_app_bar_item_export_note"
        android:title="@string/export_note"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:icon="@drawable/baseline_ios_share_24"/>
    <item
        android:id="@+id/bottom_app_bar_item_delete_note"
        android:title="@string/delete_note"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/bottom_app_bar_item_restore_note"
        android:title="@string/restore_note"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/bottom_bar_item_draft"
        android:icon="@drawable/menu"
        android:title="@string/main_menu_draft"
        app:showAsAction="ifRoom"
        android:visible="true"/>
</menu>